# FastVINS

./: .gitignore  CMakeLists.txt  CMakeLists_.txt  main.cpp
app/: curvefitting.cpp  system_identification.cpp  vins_stereo_test.cpp  vio_inertial_init.cpp  vio_init.cpp  vio_init_simulator.cpp  vio_test.cpp  vio_test2.cpp  vo_test.cpp
lib/: CMakeLists.txt
lib/backend/: CMakeLists.txt  dog_leg.cpp  edge.cpp  edge.h  eigen_types.h  gauss_newton.cpp  lbfgs.cpp  levenberg_marquardt.cpp  loss_function.cpp  loss_function.h  problem.cpp  problem.h  problem_slam.cpp  problem_slam.h  steepest_descent.cpp  vertex.cpp  vertex.h
lib/eigen3/: .hg_archival.txt  COPYING.GPL  COPYING.LGPL  COPYING.MPL2
lib/eigen3/Eigen/: Core
lib/eigen3/Eigen/src/Cholesky/: LDLT.h  LLT.h
lib/eigen3/Eigen/src/Core/: ArrayWrapper.h  AssignEvaluator.h  ConditionEstimator.h  CoreEvaluators.h  DenseCoeffsBase.h  DenseStorage.h  GenericPacketMath.h  Redux.h  SelfAdjointView.h
lib/eigen3/Eigen/src/Eigenvalues/: ComplexEigenSolver.h  ComplexSchur.h  EigenSolver.h  GeneralizedEigenSolver.h  GeneralizedSelfAdjointEigenSolver.h  HessenbergDecomposition.h  RealQZ.h  RealSchur.h  SelfAdjointEigenSolver.h  Tridiagonalization.h
lib/eigen3/Eigen/src/Geometry/: Quaternion.h
lib/eigen3/Eigen/src/IterativeLinearSolvers/: BasicPreconditioners.h  BiCGSTAB.h  ConjugateGradient.h  IncompleteCholesky.h  IncompleteLUT.h  IterativeSolverBase.h  LeastSquareConjugateGradient.h
lib/eigen3/Eigen/src/LU/: FullPivLU.h  InverseImpl.h  PartialPivLU.h
lib/eigen3/Eigen/src/OrderingMethods/: Amd.h  Eigen_Colamd.h  Ordering.h
lib/eigen3/Eigen/src/QR/: ColPivHouseholderQR.h  HouseholderQR.h  (+1 more)
lib/eigen3/bench/: sparse_cholesky.cpp
lib/eigen3/bench/btl/: COPYING
lib/eigen3/bench/spbench/: sp_solver.cpp
lib/eigen3/blas/testing/: cblat2.f  cblat3.f  dblat1.f  dblat2.f  dblat3.f  sblat1.f  sblat2.f  sblat3.f  zblat2.f  zblat3.f
lib/eigen3/doc/: A05_PortingFrom2To3.dox  DenseDecompositionBenchmark.dox  Doxyfile.in  FunctionsTakingEigenTypes.dox  InplaceDecomposition.dox  NewExpressionType.dox  PreprocessorDirectives.dox  QuickReference.dox  SparseLinearSystems.dox  SparseQuickReference.dox  TopicAssertions.dox  TopicLazyEvaluation.dox  TutorialArrayClass.dox  TutorialBlockOperations.dox  TutorialMatrixClass.dox  TutorialSparse.dox  UnalignedArrayAssert.dox  WrongStackAlignment.dox  eigendoxy_header.html.in
lib/eigen3/unsupported/Eigen/: AutoDiff  FFT  IterativeSolvers
lib/eigen3/unsupported/test/: FFTW.cpp
lib/tic_toc/: CMakeLists.txt  tic_toc.h
modules/: CMakeLists.txt
modules/fdsi/: CMakeLists.txt  fdsi.cpp  fdsi.h  fdsi_edge.h  fdsi_vertex.h  p1id.cpp  p1id.h
modules/test_ba/: CMakeLists.txt  edge_reprojection.cpp  edge_reprojection.h  imu_integration.cpp  imu_integration.h  vertex_pose.cpp  vertex_pose.h
modules/vins/: CMakeLists.txt  data_manager.cpp  data_manager.h  edge_imu.cpp  edge_imu.h  edge_reprojection.cpp  edge_reprojection.h  estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  imu_integration.cpp  imu_integration.h  parameters.h  vertex_inverse_depth.h  vertex_motion.h  vertex_point3d.h  vertex_pose.h
modules/vins_mono/: imu_integration.cpp
modules/vins_mono/2d_to_3d/: global_triangulate.cpp
modules/vins_mono/3d_to_2d/: dlt_pnp.cpp  ml_pnp.cpp  pnp.cpp
modules/vins_mono/bundle_adjustment/: local_bundle_adjustment.cpp
modules/vins_mono/data_process/: imu_process.cpp
modules/vins_mono/data_structure/: feature.cpp  feature.h  frame.cpp  frame.h  map.cpp  map.h  map_point.cpp  map_point.h  state.cpp  state.h
modules/vins_mono/edge/: edge_align.cpp  edge_align.h  edge_align_linear.h  edge_epipolar.cpp  edge_pnp_sim3.cpp  edge_reprojection.h
modules/vins_mono/initialize/: inertial_initialize.cpp
modules/vins_mono/vertex/: vertex_inverse_depth.h  vertex_vec1.h  vertex_velocity.h
modules/vins_stereo/: CMakeLists.txt  common.h  data_manager.h  estimator.cpp  estimator.h  parameters.h
modules/vins_stereo/2d_to_2d/: homography.cpp
modules/vins_stereo/2d_to_3d/: local_triangulate.cpp
modules/vins_stereo/3d_to_2d/: iter_pnp.cpp
modules/vins_stereo/bundle_adjustment/: global_bundle_adjustment.cpp
modules/vins_stereo/data_process/: image_process.cpp  imu_process.cpp
modules/vins_stereo/edge/: edge_align_linear.cpp  edge_imu.h  edge_pnp.cpp  edge_reprojection.cpp  edge_reprojection.h
modules/vins_stereo/initialize/: inertial_initialize.cpp
modules/vins_stereo/vertex/: vertex_acc_bias.h  vertex_motion.h
modules/vo_test/: CMakeLists.txt  data_manager.cpp  data_manager.h  edge_epipolar.cpp  edge_imu.cpp  edge_imu.h  edge_pnp.cpp  edge_pnp_sim3.cpp  edge_reprojection.h  estimator.cpp  estimator.h  imu_integration.cpp  imu_integration.h  parameters.h  vertex_spherical.h
modules/vo_test/2d_to_2d/: essential.cpp
modules/vo_test/2d_to_3d/: global_triangulate.cpp
modules/vo_test/3d_to_2d/: e_pnp.cpp  iter_pnp.cpp  pnp.cpp
modules/vo_test/bundle_adjustment/: global_bundle_adjustment.cpp  local_bundle_adjustment.cpp
modules/vo_test/data_process/: image_process.cpp  imu_process.cpp
modules/vo_test/edge/: edge_align.cpp  edge_align_linear.cpp  edge_epipolar.h  edge_imu.cpp  edge_pnp.h  edge_pnp_sim3.h  edge_reprojection.cpp  edge_reprojection.h
modules/vo_test/initialize/: inertial_initialize.cpp  visual_initialize.cpp
modules/vo_test/triangulate/: global_triangulate.cpp  local_triangulate.cpp
modules/vo_test/vertex/: vertex_bias.h  vertex_gyro_bias.h  vertex_point3d.h  vertex_pose.h  vertex_quaternion.cpp  vertex_quaternion.h  vertex_scale.cpp  vertex_scale.h  vertex_spherical.cpp
(+39 files in other folders)
